@@ -667,6 +667,7 @@
     <string name="website">Website</string>
     <string name="url">Url</string>
     <string name="recent_stories">Recent stories</string>
+    <string name="select_text">Select text</string>
     <plurals name="drop_x_items">
         <item quantity="one">Drop %1$s item</item>
         <item quantity="other">Drop %1$s items</item>
