@@ -1,7 +1,9 @@
 0.9.83
 ======
 
- - Embed webpages
+ - View stories on profiles
+ - Embed webpages in pages
+ - Select partial text in messages
 
 0.9.82
 ======
